--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -6,6 +6,9 @@ indices:
       - '/**'
     exclude:
       - '/**.json'
+      - '/nav'
+      - '/footer'
+      - '/fragments/'
     target: /query-index.json
     properties:
       lastModified:
@@ -14,3 +17,12 @@ indices:
       robots:
         select: head > meta[name="robots"]
         value: attribute(el, "content")
+    image:
+      select: head > meta[property="og:image"] 
+      value: matchattribute(el, "content"), "https:WI~/]+(/.*)")
+    title:
+      select: head > meta[property="og:title"] 
+      value: attribute(el, "content") 
+    description:
+      select: head > meta[name="description"] 
+      value: attribute(el, "content")
